Updates to HTML Code

--- a/stat-card-widget/src/card.html
+++ b/stat-card-widget/src/card.html
@@ -30,9 +30,9 @@
             <span class="tooltip" style="font-size:0.85rem;color:#9ca3af;margin-left:1rem;cursor:help;">
               Scroll of Summoning
               <span class="tooltiptext">
-                ✉️ <a href="mailto:adam.r.popescu@gmail.com" style="color:inherit;text-decoration:none;">adam.r.popescu@gmail.com</a> | 
-                📞 <a href="tel:2028304666" style="color:inherit;text-decoration:none;">(202) 830-4666</a> | 
-                🔗 <a href="https://linkedin.com/in/adamrobertspopescu" target="_blank" style="color:inherit;text-decoration:none;">linkedin.com/in/adamrobertspopescu</a>
+                ✉️ <a href="mailto:adam.r.popescu@gmail.com" style="color:inherit;text-decoration:none;">adam.r.popescu@gmail.com</a><br>
+                📞 <a href="tel:2028304666" style="color:inherit;text-decoration:none;">(202) 830-4666</a><br>
+                🔗 <a href="https://adam-roberts.info" target="_blank" style="color:inherit;text-decoration:none;">adam-roberts.info</a>
               </span>
             </span>
           </h2>
@@ -292,12 +292,12 @@
             <div class="quest-node">
               <div class="quest-title">🌌 Nebulous IT Consulting</div>
               <div class="quest-sub">IT Infrastructure Engineer & ISSE / Owner (Oct 2021 – Mar 2025)</div>
-              <div class="quest-desc">Wrote ATO docs, deployed containerized infra, tuned SIEM dashboards, fixed vulnrabilities, and guided client audits.</div>
+              <div class="quest-desc">Wrote ATO docs, deployed containerized infra, tuned SIEM dashboards, fixed vulnrabilities, and guided client it operations.</div>
             </div>
             <div class="quest-node">
               <div class="quest-title">🤖️ USAI</div>
               <div class="quest-sub">Sr. Systems Lead & ISSO (Sep 2024 – Feb 2025)</div>
-              <div class="quest-desc">Automated FedRAMP workflows, rebuilt ITSM from the ground up, served on leadership committee and improved patch compliance by 15%.</div>
+              <div class="quest-desc">Automated FedRAMP workflows, helped rebuilt ITSM from the ground up, served on leadership committee and improved patch compliance by 15%.</div>
             </div>
             <div class="quest-node">
               <div class="quest-title">🛡️ Shield AI</div>
