--- a/stat-card-widget/src/card.html
+++ b/stat-card-widget/src/card.html
@@ -274,7 +274,7 @@
                 <li>☕️ <span class="tooltip">Caffeine Stack Maxed
                   <span class="tooltiptext">+10 Stamina, -5 Sleep — Buff lasts 12 hours or until forced reboot</span>
                 </span></li>
-                <li>🧒 <span class="tooltip">Child of the Command Line
+                <li>🧒🏻 <span class="tooltip">Child of the Command Line
                     <span class="tooltiptext">+4 Intelligence, +3 Debugging — Raised on bash scripts and boot logs, mastered computers before middle school</span>
                   </span></li>
                 <li>🦸🏻‍♂️ <span class="tooltip">Alignment: Chaotic Good – Extreme Ownership
